<resources>
    <string name="app_name">Z-Way</string>
    <string name="zway_firmware_update_required">Please update your Z-Way. version 2.3.0 is required!</string>
    <string name="fragment_dashboard_title">Dashboard</string>
    <string name="fragment_elements_title">Elements</string>
    <string name="fragment_locations_title">Locations</string>
    <string name="fragment_notifications_title">Notifications</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_general_title">General</string>
    <string name="fragment_settings_hubs_title">Hub\'s</string>
    <string name="fragment_settings_geofencing_title">Geofencing</string>
    <string name="fragment_settings_hubs_detail_title">Hub Detail</string>
    <string name="fragment_protocol_title">Protocol</string>
    <string name="fragment_map">Map: %1$s</string>
    <string name="fragment_legal">Legal</string>
    <string name="fragment_help_title">Help</string>
    <string name="fragment_camera">Camera</string>
    <string name="constrain_device_type">Device Type</string>
    <string name="constrain_tags">Tags</string>
    <string name="constrain_sorting">Ordering</string>
    <string name="constrain_notification_type">Type</string>
    <string name="constrain_notification_source">Source</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string-array name="filter_sorting">
        <item>Custom</item>
        <item>Oldest</item>
        <item>Newest</item>
        <item>Name ASC</item>
        <item>Name DESC</item>
        <item>Last updated</item>
    </string-array>
    <string name="devices_filter_device_type">Filter by device type</string>
    <string name="devices_filter_device_type_reset">All elements</string>
    <string name="devices_filter_no_device_types">No device types available!</string>
    <string name="devices_filter_notification_source">Filter by notification source</string>
    <string name="devices_filter_notification_source_reset">All elements</string>
    <string name="devices_filter_no_device_sources">No devices available!</string>
    <string name="device_type_battery">Battery</string>
    <string name="device_type_doorlock">Doorlock</string>
    <string name="device_type_thermostat">Thermostat</string>
    <string name="device_type_switch_binary">Switch binary</string>
    <string name="device_type_switch_multilevel">Switch multilevel</string>
    <string name="device_type_sensor_binary">Sensor binary</string>
    <string name="device_type_sensor_multilevel">Sensor multilevel</string>
    <string name="device_type_switch_toggle">Switch toggle</string>
    <string name="device_type_switch_control">Switch control</string>
    <string name="device_type_toggle_button">Toggle button</string>
    <string name="device_type_switch_rgbw">Switch RGBW</string>
    <string name="device_type_text">Text</string>
    <string name="device_type_camera">Camera</string>
    <string name="device_type_sensor_discrete">Sensor discrete</string>
    <string name="device_type_sensor_multiline">Information</string>
    <string name="devices_filter_tags">Filter by tag</string>
    <string name="devices_filter_tags_reset">All elements</string>
    <string name="devices_filter_no_tags">No tags available!</string>
    <string name="devices_sorting">Sort by</string>
    <string name="form_hub_item_title">Title</string>
    <string name="form_hub_item_remote_service">Remote service</string>
    <string name="form_hub_item_remote_id">Remote id</string>
    <string name="form_hub_item_username">Username</string>
    <string name="form_hub_item_password">Password</string>
    <string name="form_hub_item_local_ip">IP address</string>
    <string name="form_hub_item_hub_ssid">SSID</string>
    <string name="form_hub_item_hub_wifi_password">Wifi password</string>
    <string name="form_hub_item_hub_ip">IP address</string>
    <string name="form_hub_item_configuration_not_complete">Please check the correctness of your data.</string>
    <string name="intro_title">Welcome</string>
    <string name="intro_permission">Permission to use the camera is required!</string>
    <string name="intro_permission_btn">Grant permission</string>
    <string name="intro_description">Please scan the QR code you find on your device or in the user setup of your web interface.</string>
    <string name="intro_manual_description">Configure your device manually.</string>
    <string name="intro_qr_code_btn">QR code</string>
    <string name="intro_manual_btn">Manual</string>
    <string name="intro_manual_login">Login</string>
    <string name="intro_manual_remote_access">Access via remote service</string>
    <string name="intro_manual_local_access">Access via local access</string>
    <string name="intro_manual_hubs_wifi">Access via Wifi of the Hub</string>
    <string name="intro_connect_btn">Connect</string>
    <string name="intro_connecting">Connecting</string>
    <string name="intro_finish_btn">Finish</string>
    <string name="intro_details_btn">Details</string>
    <string name="intro_manual_local_access_search_btn">Search for local Hub</string>
    <string name="intro_manual_local_access_progress">Search for local access: %1$s</string>
    <string name="intro_manual_local_access_results_title">Found locally available Hub\'s</string>
    <string name="intro_manual_local_access_results_message">More than one hub found. Please select the one you want to configure.</string>
    <string name="intro_manual_local_access_no_ip_selected">Please select a IP address first.</string>
    <string name="intro_manual_local_access_no_ip_found">No local Hub found. Please try again or skip this step.</string>
    <string name="intro_connecting_message_hub_already_exists">A Hub with this title or remote id already exists!</string>
    <string name="intro_connecting_message_z_way_connection_established">Connection to Hub successfully established.</string>
    <string name="intro_connecting_message_z_way_connection_failed">Connection to Hub failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_z_way_authentication_successful">Authentication was successful.</string>
    <string name="intro_connecting_message_z_way_authentication_failed">Authentication failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_current_profile_loaded">Current profile successfully loaded.</string>
    <string name="intro_connecting_message_current_profile_failed">Loading of current profile failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_device_data_loaded">All device data successfully loaded.</string>
    <string name="intro_connecting_message_device_data_failed">Loading of device data failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_device_history_data_loaded">Device history of the last 24 hours successfully loaded.</string>
    <string name="intro_connecting_message_device_history_data_failed">Loading of device history of the last 24 hours failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_icon_data_loaded">Icons successfully loaded.</string>
    <string name="intro_connecting_message_icon_data_failed">Loading of icons failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_location_data_loaded">All location data successfully loaded.</string>
    <string name="intro_connecting_message_location_data_failed">Loading of location data failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_notification_data_loaded">Notifications of the last 12 hours successfully loaded.</string>
    <string name="intro_connecting_message_notification_data_failed">Loading of notifications of the last 12 hours failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_profile_data_loaded">All profile data successfully loaded.</string>
    <string name="intro_connecting_message_profile_data_failed">Loading of profile data failed! Please check the correctness of your data.</string>
    <string name="intro_connecting_message_app_registration_successfully">Setting up the Mobile App Support in Z-Way needed for the notifications.</string>
    <string name="intro_connecting_message_app_registration_failed">Setting up the Mobile App Support in Z-Way failed!</string>
    <string name="intro_connecting_message_initialize_hub_successfully">All actions have been successfully completed. The App is now ready for use.</string>
    <string name="intro_check_access_via_wifi">Check access via WiFi of the Hub.</string>
    <string name="intro_access_via_wifi_established">Access via Wifi of the Hub successfully established.</string>
    <string name="intro_access_via_wifi_skip">Skip access via WiFi of the Hub.</string>
    <string name="intro_check_access_via_remote">Check access via remote service.</string>
    <string name="intro_access_via_remote_established">Access via remote service successfully established.</string>
    <string name="intro_access_via_remote_skip">Skip access via remote service.</string>
    <string name="intro_check_access_via_local">Check connection via local access.</string>
    <string name="intro_access_via_local_established">Connection via local access successfully established.</string>
    <string name="intro_access_via_local_skip">Skip connection via local access.</string>
    <string name="intro_access_failed_with_all">Connection to Hub has failed with all variants.</string>
    <string name="intro_access_successful_at_least_with_one">Connection to Hub successfully established at least with one variant.</string>
    <string name="intro_setting_up_z_way_app">Setting up the Mobile App Support in Z-Way needed for the notifications.</string>
    <string name="intro_setting_up_z_way_app_internal_error">Sending the register command to the App resulted in an internal Z-Way error.</string>
    <string name="intro_setting_up_z_way_firebase_unavailable">Firebase Cloud Messaging unavailable!</string>
    <string name="note">Note</string>
    <string name="change">Change</string>
    <string name="fragment_settings_general_view_starting_point_title">Start view</string>
    <string name="fragment_settings_general_protocol_btn">Show protocol</string>
    <string name="fragment_settings_general_about">About</string>
    <string name="fragment_settings_general_open_source_message">Z-Way App Version 1.5 (14.12.2018)\n\nCopyright &#169; 2018 Z-Wave.Me\n\nZ-Way App is build using open source software:</string>
    <string name="fragment_settings_general_open_source_btn">Open source software</string>
    <string name="fragment_settings_general_view_options_title">View settings</string>
    <string name="fragment_settings_general_view_options_battery_info">Show battery info</string>
    <string name="fragment_settings_geofencing_phone_settings">Phone settings</string>
    <string name="fragment_settings_geofencing_phone_settings_desc">Phone settings affect all homes.</string>
    <string name="fragment_settings_geofencing_phone_settings_enabled">Geofencing enabled</string>
    <string name="fragment_settings_geofencing_phone_name">Title / Image</string>
    <string name="fragment_settings_geofencing_phone_name_desc">Title and image displayed in Z-Way, when the mobile phone is in a geofencing area of a home.</string>
    <string name="fragment_settings_geofencing_update_device_btn">Create/update Z-Way presence module</string>
    <string name="fragment_settings_geofencing_hub_location_undefined">Not all Hub\'s have a location configured! The location settings can be found in the Hub settings.</string>
</resources>