<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:background="@drawable/md_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="100dp">

            <android.support.v7.widget.CardView
                style="@style/SensorCard"
                android:id="@+id/fragment_settings_geofencing_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:elevation="2dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/note"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_geofencing_hub_location_undefined"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/SensorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_settings_geofencing_phone_settings"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_geofencing_phone_settings_desc"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/SensorSwitch"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/primary_text"
                        android:text="@string/fragment_settings_geofencing_phone_settings_enabled"
                        android:id="@+id/fragment_settings_geofencing_phone_settings_enabled" />

                    <LinearLayout
                        android:id="@+id/fragment_settings_geofencing_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fragment_settings_geofencing_phone_name"
                                android:textColor="@color/primary_text"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_settings_geofencing_phone_name_desc"
                            android:textColor="@color/secondary_text"
                            android:textSize="16sp"
                            android:layout_marginTop="8dp" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fragment_settings_geofencing_phone_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" >

                            <EditText
                                android:id="@+id/fragment_settings_geofencing_phone_name_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/form_hub_item_title"
                                android:inputType="text" />

                        </android.support.design.widget.TextInputLayout>

                        <ImageView android:id="@+id/fragment_settings_geofencing_phone_image"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_tile_placeholder" />

                        <Button
                            android:id="@+id/fragment_settings_geofencing_phone_image_change_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center"
                            android:text="@string/change"
                            android:textColor="@color/icons"
                            android:theme="@style/SensorButton" />

                        <Button
                            android:id="@+id/fragment_settings_geofencing_update_device_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center"
                            android:text="@string/fragment_settings_geofencing_update_device_btn"
                            android:textColor="@color/icons"
                            android:theme="@style/SensorButton" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>