<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:background="@drawable/md_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="100dp">

            <android.support.v7.widget.CardView
                style="@style/SensorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_settings_general_view_starting_point_title"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <Spinner
                        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        android:backgroundTint="@color/primary_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center"
                        android:textColor="@color/primary_text"
                        android:id="@+id/fragment_settings_general_view_starting_point" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/SensorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_settings_general_view_options_title"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <CheckBox
                        android:text="@string/fragment_settings_general_view_options_battery_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/fragment_settings_general_view_battery_info_checkbox" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/SensorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_settings_general_about"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_general_open_source_message"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp" />

                    <Button
                        android:id="@+id/fragment_settings_general_open_source_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:text="@string/fragment_settings_general_open_source_btn"
                        android:textColor="@color/icons"
                        android:theme="@style/SensorButton" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
            style="@style/SensorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            card_view:cardCornerRadius="2dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Debugging"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:text="Notification counter"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:id="@+id/fragment_settings_general_debugging_notifications_counter" />

                <CheckBox
                    android:text="Enable debugging notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/fragment_settings_general_debugging_notifications_checkbox" />

                <Button
                    android:id="@+id/fragment_settings_general_debugging_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:text="@string/fragment_settings_general_protocol_btn"
                    android:textColor="@color/icons"
                    android:theme="@style/SensorButton" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>